refactor to use more generic collections & optimize them when possible